[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font_button.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/LeaderSelector.gd" type="Script" id=2]
[ext_resource path="res://assets/BGs/Gorgo_bg_placeholder.png" type="Texture" id=3]

[node name="LeaderSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 608.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGStack" type="ColorRect" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.9
mouse_filter = 2
color = Color( 0.368627, 0.368627, 0.368627, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxStack" type="GridContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.9
mouse_filter = 2
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGUsed" type="ColorRect" parent="."]
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
mouse_filter = 2
color = Color( 0.368627, 0.368627, 0.368627, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxUsed" type="GridContainer" parent="."]
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
mouse_filter = 2
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGet" type="Button" parent="."]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.1
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 1 )
text = "Get Leader"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReset" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.9
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 1 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonGet" to="." method="_on_ButtonGet_pressed"]
[connection signal="pressed" from="ButtonReset" to="." method="_on_ButtonReset_pressed"]
